- publish new version of ent to update GraphQLConnectionType's type - update IndexedEdge and ForeignKeyEdge to return `Data` for TsEdgeQueryEdgeName - update conn.tmpl to use TsEdgeQueryEdgeName instead of hardcoding AssocEdge. - regenerate ent-rsvp

--- a/internal/graphql/ts_templates/connection.tmpl
+++ b/internal/graphql/ts_templates/connection.tmpl
@@ -8,7 +8,7 @@
   {{reserveImport .ImportPath .Type}}
 {{ end -}}
 
-var connType: {{useImport "GraphQLConnectionType"}}<{{useImport "GraphQLObjectType"}}, {{useImport "AssocEdge"}}>;
+var connType: {{useImport "GraphQLConnectionType"}}<{{useImport "GraphQLObjectType"}}, {{useImport $conn.Edge.TsEdgeQueryEdgeName}}>;
 
 export const {{ $conn.ConnType}} = () => {
 {{/* memoizee or something that actually confirms this is run only once is better here but memoizee doesn't work because GraphQLSchema */ -}}
