support converting value out of db into expected representation
for now this only works for sqlite: booleans and dates

eventually, will need this for lists,json objects and other complex types

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -52,7 +52,13 @@ export class {{$baseClass}} {
 
   constructor(public viewer: {{$viewerType}}, data:{{$dataType}}) {
     {{range $field := .FieldInfo.Fields -}}
-      this.{{$field.TsFieldName}} = data.{{$field.GetDbColName}};
+      {{$val := printf "data.%s" $field.GetDbColName -}}
+      {{$convertType := convertFunc $field.GetFieldType -}}
+      {{if $convertType -}} 
+        this.{{$field.TsFieldName}} = {{useImport $convertType}}({{$val}});
+      {{ else -}}
+        this.{{$field.TsFieldName}} = {{$val}};
+      {{end -}}
     {{end}}
   }
 
