retry with just node 16 and remove cache

--- a/ts/Dockerfile.tmpl
+++ b/ts/Dockerfile.tmpl
@@ -1,5 +1,5 @@
 # get and install tsent
-FROM golang:1.16.5-buster As golang-image
+FROM golang:1.16.5-buster AS golang-image
 ENV GOPATH=$HOME/go
 ENV GOBIN $GOPATH/bin
 ENV PATH $PATH:$GOPATH/bin
