--- a/ts/Dockerfile.tmpl
+++ b/ts/Dockerfile.tmpl
@@ -3,7 +3,7 @@ FROM golang:1.16.5-buster AS golang-image
 ENV GOPATH=$HOME/go
 ENV GOBIN $GOPATH/bin
 ENV PATH $PATH:$GOPATH/bin
-RUN go install github.com/lolopinto/ent/tsent@v0.0.19
+RUN go install github.com/lolopinto/ent/tsent@{{.TsentVersion}}
 
 # get and install auto_schema
 FROM python:3.8.11-buster AS python-image
@@ -11,7 +11,7 @@ RUN python -m venv /opt/venv
 # Make sure we use the virtualenv
 ENV PATH /opt/venv/bin:$PATH
 
-RUN python3 -m pip install auto_schema==0.0.7
+RUN python3 -m pip install auto_schema=={{.AutoSchemaVersion}}
 
 # final image needs to be python-based to have auto-schema work
 FROM python:3.8.11-slim AS final-image
